--- a/css/mobile.css
+++ b/css/mobile.css
@@ -156,9 +156,12 @@
   }
 
   .landing-page.mobile img {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    margin-bottom: 4rem;
     padding: 0.5rem;
     max-height: 450px;
-    ;
   }
 
   /* Main */
