--- a/css/mobile.css
+++ b/css/mobile.css
@@ -531,6 +531,7 @@
 @media only screen and (max-width: 450px) {
   .items-container {
     height: auto;
+    padding-bottom: 5rem;
   }
 
   .items-container.wana {
