--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ main {
   align-items: center;
   justify-content: center;
   gap: 2rem;
+    padding: 1rem;
 }
 
 .bio-image {
@@ -321,6 +322,7 @@ main {
 }
 
 .bio-image-laptop {
+  width: 100%;
   max-width: 800px;
   margin: 0 auto;
   height: auto;
