--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,8 @@ html {
   z-index: 1;
 }
 
+.logo-link {}
+
 .App-logo {
   pointer-events: auto;
   max-width: 100px;
@@ -121,7 +123,7 @@ html {
   height: auto;
   margin-left: 5rem;
   cursor: pointer;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .extra-icon-image {
@@ -190,7 +192,6 @@ html {
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  margin-top: 1rem;
 }
 
 .App-logos {
@@ -310,7 +311,7 @@ main {
   align-items: center;
   justify-content: center;
   gap: 2rem;
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .bio-image {
@@ -913,16 +914,36 @@ blockquote:after {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
+  align-items: center;
+  gap: 1rem;
   max-width: 1200px;
   margin: 0 auto;
+  background-color: #f8cdd8;
+  padding: 2rem;
+}
+
+.video-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 550px;
+  padding: 1rem;
+
+}
+
+iframe {
+  display: block;
+  width: 100%;
+  height: 300px;
 }
 
 .projects-video {
   max-width: 350px !important;
   height: 230px;
 }
+
+/* Video Items */
 
 .video-main-container {
   display: flex;
@@ -996,10 +1017,8 @@ blockquote:after {
   align-items: center;
 }
 
-iframe {
-  width: 600px;
-  height: 400px;
-}
+
+/* Contact page */
 
 .contact-container {
   max-width: 1440px;
