--- a/css/mobile.css
+++ b/css/mobile.css
@@ -142,10 +142,11 @@
 
 /* Landing Page */
 @media only screen and (max-width: 450px) {
-  /* Landing Page */
 
   .index-main {
     height: 100vh !important;
+    width: 100% !important;
+    padding: 0;
   }
 
   .landing-page {
@@ -154,16 +155,18 @@
 
   .landing-page.mobile {
     display: block;
+    padding: 0;
+
   }
 
-  .landing-page.mobile img {
+  .mobile-homepage {
     width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-    margin-bottom: 4rem;
+     width: 100%;
     padding: 0.5rem;
     max-height: 450px;
   }
+
+
 
   /* Main */
 
@@ -450,14 +453,9 @@
 /* Contact Page */
 
 @media only screen and (max-width: 450px) {
-  .contact-container {
-    max-width: 100%;
-    margin: 0 auto;
-    height: auto;
-    flex-direction: column;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
+  .contact-main-div {
+      height: auto;
+    }
 
   .image-div {
     max-width: 350px;
@@ -482,51 +480,16 @@
 /* Videos */
 
 @media only screen and (max-width: 450px) {
-
-  /* Hide Video Title
-  .video-main-container {
-    height: auto;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    padding: 1rem;
-  }
-
-  .video-container {
-    padding-bottom: 5rem;
-  }
-
   .video-main {
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
-    padding: 0;
-    width: 100%;
+    gap: 2.5rem;
     height: auto;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
   }
-
-  .video-item {
-    padding: 0.1rem;
-    width: 100%;
-  }
-
- */
-
- .video-main {
-   gap: 2.5rem;
-   height: auto;
-
-   
- }
 
 
   iframe {
     width: 100%;
     height: auto;
   }
-
-
 
   .container-video {
     gap: 1rem;
@@ -547,8 +510,6 @@
     height: 200px;
   }
 }
-
-@media screen and (max-width: 1020px) {}
 
 
 /* Exhibition Pages */
@@ -601,3 +562,5 @@
     height: auto;
   }
 }
+
+@media screen and (max-width: 1020px) {}
