--- a/css/mobile.css
+++ b/css/mobile.css
@@ -161,7 +161,7 @@
 
   .mobile-homepage {
     width: 100%;
-     width: 100%;
+    width: 100%;
     padding: 0.5rem;
     max-height: 450px;
   }
@@ -454,8 +454,8 @@
 
 @media only screen and (max-width: 450px) {
   .contact-main-div {
-      height: auto;
-    }
+    height: auto;
+  }
 
   .image-div {
     max-width: 350px;
@@ -514,14 +514,19 @@
 
 /* Exhibition Pages */
 @media only screen and (max-width: 450px) {
-  .items-container {
-    height: auto;
-    padding-bottom: 5rem;
+  .exhibition-main {
+    height: 100vh;
+    width: 100%;
+    padding: 0.5rem;
   }
 
-  .items-container.wana {
-    height: 100vh !important;
+
+  .items-container {
+    width: 100%;
+    padding: 0.5rem;
   }
+
+
 
   .slider-image {
     max-width: 500px;
