--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ blockquote:after {
   min-height: 700px !important;
   width: 467px !important;
   margin: 0 auto;
-  margin-bottom: 10rem;
+  background-color: #800020;
 }
 
 
