--- a/css/mobile.css
+++ b/css/mobile.css
@@ -447,20 +447,24 @@
 /* Contact Page */
 
 @media only screen and (max-width: 450px) {
-  .contact-main-div {
+  .contact-main {
     height: auto;
   }
 
-  .image-div {
-    max-width: 350px;
-    margin: 0 auto;
-    margin-top: 2rem;
+  .contact-image-container {
+    max-width: 100%;
   }
 
   .contact-main {
-    max-width: 350px;
+    max-width: 100%;
     margin: 0 auto;
   }
+
+  .contact-image {
+    max-width: 100%;
+  }
+
+
 }
 
 /* Footer */
