--- a/css/mobile.css
+++ b/css/mobile.css
@@ -449,20 +449,27 @@
 @media only screen and (max-width: 450px) {
   .contact-main {
     height: auto;
+    width: 100%;
+    padding: 0.5rem;
+  }
+
+  .contact-container {
+    height: auto;
+    padding-bottom: 5rem;
+    padding-top: 2.5rem;
   }
 
   .contact-image-container {
-    max-width: 100%;
-  }
-
-  .contact-main {
-    max-width: 100%;
-    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    padding: 0.5rem;
   }
 
   .contact-image {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
   }
+
 
 
 }
