--- a/css/mobile.css
+++ b/css/mobile.css
@@ -541,18 +541,6 @@
     width: 100%;
   }
 
-  .child-images {
-    display: flex;
-    gap: 1rem;
-    padding: 0.2rem;
-    height: auto;
-
-  }
-
-  .child-images img {
-    width: 100%;
-  }
-
   .afrofuture-last-image {
     padding: 0;
   }
@@ -565,6 +553,14 @@
     height: auto;
     width: 100%;
   }
+}
+
+@media screen and (min-width: 100px) and (max-width: 700px) {
+
+  .child-images-photos {
+    width: 100%;
+  }
+
 }
 
 @media screen and (max-width: 540px) {
