--- a/css/mobile.css
+++ b/css/mobile.css
@@ -561,6 +561,11 @@
     width: 100%;
   }
 
+    .no-victor-no-vanquished {
+      width: 100%;
+      padding: 0.5rem;
+    }
+
 }
 
 @media screen and (max-width: 540px) {
