--- a/css/style.css
+++ b/css/style.css
@@ -275,10 +275,9 @@ html {
 
 .main {
   height: 100vh !important;
-  background-image: url(../assets/homepage/1.webp);
   background-color: var(--clr-accent);
   background-repeat: no-repeat;
-  background-size: cover;
+  object-fit: cover;
   background-position: center center;
   background-attachment: fixed;
 
@@ -302,6 +301,7 @@ html {
   height: 40px;
   color: #fff;
   padding: 5px 10px;
+  font-size: 16px;
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -313,6 +313,7 @@ html {
   border: none;
   background-color: var(--clr-primary);
   text-align: center;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .home-btn:hover {
