--- a/css/style.css
+++ b/css/style.css
@@ -277,11 +277,22 @@ html {
   height: 100vh !important;
   background-color: var(--clr-accent);
   background-repeat: no-repeat;
+  background-size: cover;
   object-fit: cover;
   background-position: center center;
   background-attachment: fixed;
+  position: relative;
+}
 
-
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translatex(-50%);
 }
 
 
@@ -294,9 +305,6 @@ html {
 
 
 .home-btn {
-  position: fixed;
-  top: 50%;
-  left: 50%;
   min-width: 120px;
   height: 40px;
   color: #fff;
