--- a/css/style.css
+++ b/css/style.css
@@ -441,27 +441,43 @@ html {
 /* Projects Pages */
 
 
+
+.quote-container {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 0.25rem;
+}
+
+
 .blockquote-div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   max-width: 800px;
-  min-height: 300px;
+  min-height: 400px;
   margin: 0 auto;
   position: relative;
+  padding: 2rem 0.25rem;
 }
 
 blockquote {
   position: relative;
-  padding: 3rem;
+  padding: 3rem 0rem;
   text-align: center;
   max-width: 620px;
-  min-height: 200px;
+  min-height: 250px;
 }
 
 blockquote:before {
   position: absolute;
   font-size: 100px;
   line-height: 1;
-  top: 0;
-  left: 0;
+  top: -2rem;
+  left: -2rem;
   content: "\201C";
   color: var(--clr-primary);
 }
@@ -470,17 +486,14 @@ blockquote:after {
   position: absolute;
   float: right;
   font-size: 100px;
-  line-height: 1;
-  right: 0;
-  bottom: -0.3em;
+  right: -2rem;
+  bottom: -5rem;
   content: "\201D";
 }
 
 .blockquote-footer {
   padding: 1rem;
-  position: absolute;
-  bottom: 20px;
-  right: 0;
+  text-align: right;
 }
 
 .projectnames {
@@ -495,15 +508,7 @@ blockquote:after {
   margin-right: 0.5rem;
 }
 
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 5rem 0.25rem;
-}
+
 
 .card-container {
   display: flex;
