--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,8 @@ html {
   background-position: center center;
   background-attachment: fixed;
   position: relative;
+  transition: background-image 3s;
+  -webkit-transition: background-image 0.5s linear;
 }
 
 .vertical-center {
@@ -295,6 +297,17 @@ html {
   transform: translatex(-50%);
 }
 
+#bg-image {
+  /* Set the background image to cover the entire element */
+  background-size: cover;
+
+  /* Center the background image */
+  background-position: center;
+
+  /* Set the height and width of the element */
+  height: 100vh;
+  width: 100%;
+}
 
 
 .link-to-exhibitions {
