--- a/css/index.css
+++ b/css/index.css
@@ -107,18 +107,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    transition: opacity 1s;
-}
-
-
 
 .backgroundDiv {
     height: 100vh !important;
@@ -130,7 +118,7 @@ body {
     background-attachment: fixed;
     position: relative;
     transition: 1s;
-    -webkit-transition: background-image 0.5s linear;
+    -webkit-transition: 0.5s;
 }
 
 .vertical-center {
