--- a/css/index.css
+++ b/css/index.css
@@ -117,8 +117,9 @@ html {
     background-position: center center;
     background-attachment: fixed;
     position: relative;
+    transition: all 0.5s ease-out ease-in;
     transition: 1s;
-    -webkit-transition: 0.5s;
+    -webkit-transition: all 0.5s ease-out ease-in;
 }
 
 .vertical-center {
